Fix overflow issues

--- a/client/src/components/document-writer/document-name/document-name.module.css
+++ b/client/src/components/document-writer/document-name/document-name.module.css
@@ -6,4 +6,5 @@
   font-size: 24px;
   font-weight: bold;
   height: 45px;
+  text-overflow: ellipsis;
 }
