--- a/client/src/components/document-writer/document-writer.module.css
+++ b/client/src/components/document-writer/document-writer.module.css
@@ -4,21 +4,21 @@
   flex: 1;
   align-items: center;
   background-color: rgb(249, 251, 253);
+  overflow-y: auto;
 }
 
 .documentWriterPaper {
   display: flex;
   flex-direction: column;
   margin: 12px 0;
-  padding: 12px;
+  padding: 48px;
   border: 1px solid rgb(208, 208, 208);
   background-color: white;
   width: min(816px, 100%);
-  min-height: 1056px;
 }
 
 .button {
-  margin-top: 18px;
+  margin-top: 30px;
   width: 200px;
   align-self: center;
 }
