--- a/client/src/components/documents-list/document-item/document-item.module.css
+++ b/client/src/components/documents-list/document-item/document-item.module.css
@@ -8,6 +8,12 @@
   cursor: pointer;
 }
 
+.documentItemName {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .deleteBtn {
   visibility: hidden;
 }
