--- a/client/src/components/documents-list/documents-list.module.css
+++ b/client/src/components/documents-list/documents-list.module.css
@@ -6,6 +6,7 @@
   border-right: 1px solid rgb(95, 95, 95);
   padding: 6px;
   gap: 12px;
+  overflow-y: auto;
 }
 
 .button {
