--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  height: 100vh;
 }
 
 code {
